--- a/src/01.01.Describe_VRI.Rmd
+++ b/src/01.01.Describe_VRI.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Describe Ranks"
 author: "Nicole Barker"
-date: "Last run: Jan 2, 2018"
+date: "Last run: Jan 9, 2018"
 output: 
   word_document:
     reference_docx: ../styles/ReportFormat_1.docx
@@ -32,21 +32,12 @@ We wish to know whether these ranks are reliable for decision making.
 
 ## 1. First, an overview of the ranks
 
-**Old VRI File**
-
-``` {r, eval=F}
-vri <- read.csv("data/FORSITE_all_regions__Nicoles_VRI_fields_fixednames-zSpGroup.csv", header=T)
-colnames(vri)[which(colnames(vri) %in% "code_use")] <- "SpeciesGroup"
-vri$ForID <- with(vri, paste(BecZone, SpeciesGroup, Age, Height, sep="."))
-
-kable(data.frame(VRI_columnNames=colnames(vri)))
-```
-
-**New VRI File - fixed late December 2017**
+** VRI File - fixed late December 2017**
 
 ``` {r}
 load("cache/vri_forsite_postclean.RData")
 vri <- vri_forsite_postclean; rm(vri_forsite_postclean)
+colnames(vri)
 ```
 
 **NOTES**
@@ -126,6 +117,7 @@ Now we have `r length(unique(stand_rank_lookup$ForID))` unique Forest Stand IDs.
 
 #### Create second and third tables for ease of plotting
 ``` {r}
+stand_rank_lookup$Rank <- as.numeric(as.character(stand_rank_lookup$Rank))
 srlnona <- stand_rank_lookup[!is.na(stand_rank_lookup$Rank),]
 srlfac <- stand_rank_lookup
 srlfac$Rank <- factor(srlfac$Rank)
@@ -152,15 +144,15 @@ rm(tmpdat)
 ```
 
 ``` {r, Fig.Rank_Bec2, fig.height=5, fig.width=5, dpi=150}
-ggplot(stand_rank_lookup, aes(x=Rank, fill=BecZone)) + geom_histogram(bins=6, col="black") + scale_x_continuous(labels=c(1:6), breaks=1:6) + ylab("Number of Stand Types") + scale_fill_manual(values=palbec, name = "BEC Zone") + myfacettheme3 + xlab("Stand Rank")
+ggplot(stand_rank_lookup, aes(x=as.numeric(as.character(Rank)), fill=BecZone)) + geom_histogram(bins=6, col="black") + scale_x_continuous(labels=c(1:6), breaks=1:6) + ylab("Number of Stand Types") + scale_fill_manual(values=palbec, name = "BEC Zone") + myfacettheme3 + xlab("Stand Rank")
 ``` 
 
 ``` {r, Fig.Rank_Bec3, fig.height=10, fig.height=6, dpi=150}
-ggplot(stand_rank_lookup, aes(x=Rank, fill=BecZone)) + geom_histogram(aes(y=..density..), bins=6, col="black") + facet_wrap(~BecZone, ncol=2) + myfacettheme2 + scale_x_continuous(labels=c(1:6), breaks=1:6) + ylab("Proportion of Stand Types within BEC Zone") + scale_fill_manual(values=palbec, guide=FALSE) + xlab("Stand Rank")
+ggplot(stand_rank_lookup, aes(x=as.numeric(as.character(Rank)), fill=BecZone)) + geom_histogram(aes(y=..density..), bins=6, col="black") + facet_wrap(~BecZone, ncol=2) + myfacettheme2 + scale_x_continuous(labels=c(1:6), breaks=1:6) + ylab("Proportion of Stand Types within BEC Zone") + scale_fill_manual(values=palbec, guide=FALSE) + xlab("Stand Rank")
 ```
 
 ``` {r, Fig.Rank_Bec4, fig.height=6, fig.width=9, dpi=200}
-ggplot(rank_counts_bec, aes(x=Rank, y=NumberStandTypes, fill=BecZone)) + geom_bar(stat="identity", position=position_dodge(width=0.8), width=0.8, col="black") + scale_fill_manual(values=palbec, name="BEC Zone", guide=FALSE) + scale_x_continuous(labels=c(1:6), breaks=1:6) +ylab("Number of Stand Types") + myfacettheme3 + geom_text(aes(label=BecZone), position=position_dodge(width=0.8), vjust=0.4, hjust=-0.1, angle=90, size=3) + xlab("Stand Rank") + ylim(0, 90)
+ggplot(rank_counts_bec, aes(x=as.numeric(as.character(Rank)), y=NumberStandTypes, fill=BecZone)) + geom_bar(stat="identity", position=position_dodge(width=0.8), width=0.8, col="black") + scale_fill_manual(values=palbec, name="BEC Zone", guide=FALSE) + scale_x_continuous(labels=c(1:6), breaks=1:6) +ylab("Number of Stand Types") + myfacettheme3 + geom_text(aes(label=BecZone), position=position_dodge(width=0.8), vjust=0.4, hjust=-0.1, angle=90, size=3) + xlab("Stand Rank") + ylim(0, 90)
 ```
 
 
@@ -169,9 +161,9 @@ ggplot(rank_counts_bec, aes(x=Rank, y=NumberStandTypes, fill=BecZone)) + geom_ba
 *Get an overall idea of the distribution of ranks among Tree Species Groups*
 
 ``` {r, Fig.Rank_SPGrp1, fig.height=3, fig.width=7, dpi=150}
-ggplot(srlnona, aes(x=SpeciesGroup, y=Rank, col=SpeciesGroup)) + geom_jitter(alpha=0.5, position=position_jitter(height=0.1, width=0.2)) + myfacettheme1 + scale_y_continuous(labels=c(1:6), breaks=1:6) + scale_color_manual(values=palsg, guide=FALSE) + ylab("Stand Rank") + xlab("Dominant Tree Species")
+ggplot(srlnona, aes(x=SpeciesGroup, y=as.numeric(as.character(Rank)), col=SpeciesGroup)) + geom_jitter(alpha=0.5, position=position_jitter(height=0.1, width=0.2)) + myfacettheme1 + scale_y_continuous(labels=c(1:6), breaks=1:6) + scale_color_manual(values=palsg, guide=FALSE) + ylab("Stand Rank") + xlab("Dominant Tree Species")
 
-ggplot(srlnona, aes(x=SpeciesGroup, y=Rank)) + geom_jitter(alpha=0.5, position=position_jitter(height=0.05, width=0.2)) + myfacettheme1 + scale_y_continuous(labels=c(1:6), breaks=1:6) + ylab("Stand Rank") + xlab("Dominant Tree Species")
+ggplot(srlnona, aes(x=SpeciesGroup, y=as.numeric(as.character(Rank)))) + geom_jitter(alpha=0.5, position=position_jitter(height=0.05, width=0.2)) + myfacettheme1 + scale_y_continuous(labels=c(1:6), breaks=1:6) + ylab("Stand Rank") + xlab("Dominant Tree Species")
 ```
 
 *Understand how ranks are distributed among Species Groups*
